# aesa

./: Cargo.toml  README.md  Shuttle.toml  justfile  package.json
.github/workflows/: astro.yml
backend/: Cargo.toml
backend/migrations/: 20231103233022_board.up.sql
backend/src/: main.rs
frontend/: package.json
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/src/pages/messages/: index.astro  new.astro
migrations/: 20231103233022_board.up.sql
public/src/components/: Input.astro  Texarea.astro
public/src/layouts/: Layout.astro
public/src/pages/: index.astro
public/src/pages/404/: index.astro
public/src/pages/messages/: index.astro  new.astro
src/: main.rs  types.rs
src/components/: Alert.astro
src/layouts/: Layout.astro
src/pages/: index.astro
