[package]
name = "aesa"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
serde = "1.0.190"
shuttle-axum = "0.31.0"
shuttle-runtime = "0.31.0"
shuttle-shared-db = { version = "0.31.0", features = ["postgres-rustls"] }
sqlx = "0.7.2"
tokio = "1.28.2"
tower-http = { version = "0.4.4", features = ["fs", "cors"] }
